# ferrview

./: CLAUDE.md  Cargo.toml  README.md  helioscope.toml  mise.toml
ferrview-collector/: Cargo.toml  helioscope-collector.toml
ferrview-collector/src/: main.rs
ferrview-collector/src/charts/: mod.rs  renderer.rs  types.rs
ferrview-collector/src/http/: server.rs  types.rs
ferrview-collector/src/store/: date_range.rs  date_range_reader.rs  db.rs  errors.rs  mod.rs  queries.rs  reader.rs  writer.rs
ferrview-collector/templates/: base.html  error.html  home.html  node.html
ferrview-common/: Cargo.toml
ferrview-node/: Cargo.toml  ferrview-node.toml
ferrview-node/src/: config.rs  main.rs
ferrview-node/src/client/: http.rs  mod.rs
helioscope-collector/: Cargo.toml
helioscope-collector/src/: main.rs
helioscope-collector/src/charts/: mod.rs  renderer.rs  types.rs
helioscope-collector/src/http/: handlers.rs  mod.rs  server.rs  types.rs  ui.rs
helioscope-collector/src/http/handlers/: charts.rs  web.rs
helioscope-collector/src/http/ui/: helpers.rs  models.rs  styles.rs
helioscope-collector/src/http/ui/views/: home.rs  node.rs
helioscope-collector/src/store/: db.rs  mod.rs  queries.rs  reader.rs  writer.rs
helioscope-node/: Cargo.toml  helioscope-node.toml
helioscope-node/src/: config.rs  main.rs
helioscope-node/src/client/: http.rs  retry.rs
helioscope-node/src/probes/sysinfo/: cpu.rs  mem.rs  mod.rs  statik.rs  temp.rs
helioscope-node/src/utils/: timestamp.rs
os_packages/alpine/ferrview-collector/: APKBUILD
src/: main.rs
(+26 files in other folders)
