[package]
name = "helioscope-collector"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
argh.workspace = true
bytes = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
