[package]
name = "helioscope-node"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
argh.workspace = true
serde.workspace = true
sysinfo = { version = "0.37" }
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
